[package]
name = "rustrent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rand = "0.10.1"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
urlencoding = "2.1.3"
